--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -11,13 +11,13 @@
 
     <title>
       {% block title %}
-      Blog
+      MAIT CONNECTIONS
       {% endblock %}
     </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="{% url 'home' %}">Blog!</a>
+  <a class="navbar-brand" href="{% url 'home' %}"><em> MAIT CONNECTION <sup>s</sup> </em></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -127,6 +127,14 @@
     
   </div>
 </nav>
+     <div class="alert alert-primary d-flex align-items-center" role="alert">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </svg>
+  <div>
+    Please login to enjoy its benifits. if already did ignore it. enjoy!<p>&#127750;</p>
+  </div>
+    </div>
 
 
 
